correciones, estilos y mensajes.

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -12,7 +12,7 @@
     />
     <title>App Restaurant</title>
   </head>
-  <body class="bg-gradient-secondary">
+  <body class="bg-gray-200">
     <noscript
       >Necesitas habilitar JavaScript para correr esta aplicacion.</noscript
     >
